--- a/index.html
+++ b/index.html
@@ -5,35 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <!-- Content Security Policy -->
-    <meta http-equiv="Content-Security-Policy" content="
-      default-src 'self';
-      script-src 'self' 'unsafe-inline' 'unsafe-eval' 
-        https://www.google.com/recaptcha/ 
-        https://www.gstatic.com/recaptcha/ 
-        https://www.googleapis.com;
-      style-src 'self' 'unsafe-inline' 
-        https://fonts.googleapis.com;
-      font-src 'self' 
-        https://fonts.gstatic.com;
-      img-src 'self' data: blob: 
-        https://www.google.com 
-        https://www.gstatic.com;
-      connect-src 'self' 
-        https://*.firebaseapp.com 
-        https://*.googleapis.com 
-        https://*.google.com 
-        https://www.google.com/recaptcha/ 
-        https://www.gstatic.com/recaptcha/;
-      frame-src 'self' 
-        https://www.google.com/recaptcha/ 
-        https://recaptcha.google.com/recaptcha/;
-      object-src 'none';
-      base-uri 'self';
-      form-action 'self';
-      frame-ancestors 'none';
-      upgrade-insecure-requests;
-    ">
+    <!-- 🛡️ CSP will be set dynamically by our app -->
     
     <title>ZATech Website</title>
   </head>
